[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/E.png" type="Texture" id=1]
[ext_resource path="res://Art/ChestSprites.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Chest.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 47.0425

[node name="Area2D" type="Area2D"]
z_index = -1
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = -1
shape = SubResource( 1 )

[node name="ChestSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2

[node name="KeySprite" type="Sprite" parent="ChestSprite"]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
offset = Vector2( 75, 0 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
